# bevy-archie

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE_2.0  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  clippy.toml  deny.toml  tarpaulin-report.html
.cargo/: audit.toml
.github/: copilot-review.yml  dependabot.yml
.github/workflows/: auto-tag.yml  ci-migration.yml  ci.yml  codeql.yml  dependabot-auto-merge.yml  gitleaks.yml  release.yml  scorecard.yml  security.yml  sync-branches.yml
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  HARDWARE_INTEGRATION_GUIDE.md  JOYPAD_OS_ATTRIBUTION.md  JOYPAD_OS_IMPLEMENTATION_SUMMARY.md  JOYPAD_OS_INTEGRATION_ANALYSIS.md  JOYPAD_OS_QUICK_START.md  TEST_COVERAGE.md
docs/dev/: BEVY_0.17_TO_0.18_MIGRATION.md  BEVY_0.18_TO_0.19_MIGRATION.md  BRANCH_WORKFLOW.md
examples/: README.md  basic_input.rs  config_persistence.rs  controller_database.rs  controller_icons.rs  ps5_dualsense_motion.rs  remapping.rs  steam_touchpad.rs  switch_pro_gyro.rs  virtual_cursor.rs
src/: action_modifiers.rs  actions.rs  build_helpers.rs  chords.rs  conditions.rs  config.rs  constants.rs  debug.rs  detection.rs  gyro.rs  haptics.rs  icons.rs  input_buffer.rs  lib.rs  multiplayer.rs  networking.rs  plugin.rs  profiles.rs  remapping.rs  state_machine.rs  testing.rs  touch_joystick.rs  touchpad.rs  virtual_cursor.rs  virtual_input.rs  virtual_keyboard.rs
src/motion/: backend.rs  dualsense.rs  mod.rs  stub.rs
tests/: integration_tests.rs
