[package]
name = "bevy_archie"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "A comprehensive game controller support module for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bevy_archie"
keywords = ["bevy", "gamepad", "controller", "input", "gamedev"]
categories = ["game-development", "game-engines"]

[features]
default = []
# Enable icons asset loading
icons = []
# Enable on-screen keyboard for controller text input
virtual_keyboard = []
# Enable controller remapping UI
remapping = []
# All features
full = ["icons", "virtual_keyboard", "remapping"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_gilrs",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_state",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = true }

[[example]]
name = "basic_input"
path = "examples/basic_input.rs"

[[example]]
name = "controller_icons"
path = "examples/controller_icons.rs"

[[example]]
name = "remapping"
path = "examples/remapping.rs"
