[package]
name = "bevy_archie"
version = "0.1.5"
edition = "2024"
rust-version = "1.88"
description = "A comprehensive game controller support module for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greysquirr3l/bevy-archie"
documentation = "https://docs.rs/bevy_archie"
homepage = "https://github.com/greysquirr3l/bevy-archie"
readme = "README.md"
keywords = ["bevy", "gamepad", "controller", "input", "gamedev"]
categories = ["game-development", "game-engines"]
exclude = ["assets/", "target/", "reference_projects/", "docs/"]

[features]
default = []
# Enable icons asset loading
icons = []
# Enable on-screen keyboard for controller text input
virtual_keyboard = []
# Enable controller remapping UI
remapping = []
# Enable motion backend abstractions (required for any motion backend)
motion-backends = []
# Enable DualSense (PS5) controller support via HID
dualsense = ["motion-backends", "dep:dualsense-rs"]
# All features
full = ["icons", "virtual_keyboard", "remapping"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "std",
    "bevy_gilrs",
    "bevy_render",
    "bevy_asset",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_state",
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
# Optional: DualSense controller support via HID
dualsense-rs = { version = "0.6", optional = true }

# Optional dependencies for examples (not included in library)
# Users who want to run hardware integration examples should add these:
# hidapi = "2.6"  # For ps5_dualsense_motion and direct HID examples
# sdl2 = { version = "0.37", features = ["bundled"] }  # For switch_pro_gyro
# steamworks = "0.11"  # For steam_touchpad (requires Steam client)

[dev-dependencies]
bevy = { version = "0.17", default-features = true }
approx = "0.5"  # For floating point comparisons in tests

[[example]]
name = "basic_input"
path = "examples/basic_input.rs"

[[example]]
name = "controller_icons"
path = "examples/controller_icons.rs"

[[example]]
name = "remapping"
path = "examples/remapping.rs"
required-features = ["remapping"]

[[example]]
name = "ps5_dualsense_motion"
path = "examples/ps5_dualsense_motion.rs"
required-features = ["motion-backends"]

[[example]]
name = "switch_pro_gyro"
path = "examples/switch_pro_gyro.rs"
required-features = ["motion-backends"]

[[example]]
name = "steam_touchpad"
path = "examples/steam_touchpad.rs"
required-features = ["motion-backends"]
